# How-to-CMake

./: CMakeLists.txt  README.txt  hello.c  hello.h  hello_world.c
